--- a/template/enroll/main.html
+++ b/template/enroll/main.html
@@ -4,6 +4,8 @@
     <title>
         Work Report
     </title>
+    <meta content=text/html;charset=utf-8 http-equiv=Content-Type>
+    <meta content=utf-8 http-equiv=encoding>
 </head>
 <body>
     <center>
