--- a/template/enroll/main.html
+++ b/template/enroll/main.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>
-        Work Report
-    </title>
-    <meta content=text/html;charset=utf-8 http-equiv=Content-Type>
-    <meta content=utf-8 http-equiv=encoding>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
     <center>
-    <h1 style="font-family: 'Courier New', Courier, monospace;">Week 2 Daily Work</h1>
-    
-    <a href="crud">CRUD Operations</a>
-    <br><br>
-    <a href="qrgenerator">QR CODE Generator</a>
-    <br><br>
-</center>
+        <h1 style="font-family: 'Courier New', Courier, monospace;">Week 2 Daily Work</h1>
+        
+        <a href="crud">CRUD Operations</a>
+        <br><br>
+        <a href="qrgenerator">QR CODE Generator</a>
+        <br><br>
+    </center>    
 </body>
 </html>
+
